issues fixed (#122)
* schema updated with 'take_notes' and prettier config added

* chore: cutoff_time_for_non_high_priority_activities & priority fields added

* chore: priority type updated and category field added

* refactor: downgraded action/checkout to v2

* chore: restored checkout default reference

* chore: checkout info added

* checkout action removed

* restore action checkout and readme.md added

* ref value added in yml file

* issue #145 resolved and yml file updated

* modifiy repo path in yml file

* modifiy custom action path in yml file & readme updated

* refactor custom action path in yml file

* refactor readme file with custom action path

* refactor runs-on and custome action name

* refactor: yml files modified

* action path updated

* update.ini removed

* needstranslation marker added and readme.md updated

* yml runtime enviroment updated

* comma removed and rebuild index.js

* event trigger types added

* issue #77 resolved

* Revert "issue #77 resolved"

This reverts commit ece9c9f9f67edb2e8215336cc243de5e66996f22.

* feat: issue 84 & 85 resolved

* refactor: comments on issue 84

* chore: update style.css & script.js with github assets

* chore: pointer to privacy note added

* fix: issue 38

* chore: https prefix added to old_url

* refactor(script.js): https prefix added to an old_url query

* chore: template strings removed

* refactor: conditional prefixing of current_url

* block urls image path updated

* issue 120 resolved

* fix: assets resource pointer/link

* fix: issue 113

* refactor: always-block url image

* refactor a way to show url blocked reason

--- a/focus-blocked/style.css
+++ b/focus-blocked/style.css
@@ -16,7 +16,7 @@
   position: relative;
 }
 
-.container > p {
+.container>p {
   font-size: 20px;
   font-weight: 600;
 }
@@ -28,23 +28,30 @@
   gap: 10px;
 }
 
-.notice-wrapper > h6 {
+.notice-wrapper>h6 {
   font-size: 14px;
   width: 70%;
   margin: 0;
   text-align: justify;
 }
 
-.notice-wrapper > a {
+.notice-wrapper>a {
   font-weight: bold;
 }
 
 #progressWrapper {
+  width: fit-content;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+#progressWrapper img {
+  width: auto;
+  height: 380px;
 }
 
 #focusTipWrapper {
@@ -76,7 +83,7 @@
 #privacyContainer {
   width: 100%;
   position: absolute;
-  bottom: 10%;
+  bottom: 5%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -94,7 +101,7 @@
   border-radius: 10px;
 }
 
-.privacyNoticeContentArrow{
+.privacyNoticeContentArrow {
   width: 0;
   height: 0;
   border-top: 10px solid lightgray;
@@ -188,7 +195,8 @@
   overflow: auto;
 }
 
-.popup .content > a,button{
+.popup .content>a,
+button {
   width: fit-content;
   padding: 6px 10px;
   border-radius: 5px;
@@ -217,6 +225,27 @@
 .popup .content a:hover {
   background-color: red;
   color: white;
+}
+
+.toast {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  opacity: 0;
+  transition: opacity 500ms, transform 500ms;
+  margin-top: 15px;
+  padding: 15px;
+  font-size: 16px;
+  font-family: monospace;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+}
+
+.toast.visible {
+  transform: translate(-50%, 0);
+  opacity: 1;
 }
 
 @media only screen and (max-width: 1024px) {
